# PokemonCollectionManager

./: .gitattributes  .gitignore  CHANGELOG.md  PROJECT_PROGRESS.md  PokemonCollectionManager.spec  README.md  pyproject.toml  pytest_full_output.txt  requirements-build.txt  requirements-dev.txt  requirements.txt
app/: __init__.py  bootstrap.py  config.py  i18n.py  logging_config.py  main.py  secrets.py
app/cardmarket/: __init__.py  cardtrader_client.py  models.py
config/: secrets.example.json
tests/: conftest.py  test_backup_controller.py  test_browser_price_reader.py  test_browser_windows.py  test_card_artwork_view.py  test_card_controller.py  test_card_detail_panel.py  test_card_details_dialog.py  test_card_filter_bar.py  test_card_image_cache.py  test_card_panel.py  test_card_repository.py  test_card_service.py  test_cardmarket_parsing.py  test_cardmarket_search_controller.py  test_cardmarket_search_resolve_worker.py  test_cardmarket_search_results_dialog.py  test_cardmarket_search_worker.py  test_cardtrader_client.py  test_catalog_search_controller.py  test_catalog_search_results_dialog.py  test_catalog_search_service.py  test_catalog_search_worker.py  test_collection_controller.py  test_collection_panel.py  test_collection_repository.py  test_collection_service.py  test_condition_icon_provider.py  test_config.py  test_csv_export.py  test_csv_import.py  test_database.py  test_database_backup.py  test_dimmed_dialog.py  test_excel_export.py  test_excel_import.py  test_export_controller.py  test_export_dialog.py  test_export_service.py  test_i18n.py  (+62 more)
(+144 files in other folders)
